--- a/sections/cart-notification.liquid
+++ b/sections/cart-notification.liquid
@@ -30,11 +30,11 @@
                                 >
                             </div>
                         </div>
-                        <h5 class="modal__title js-cart-notification-title">Droubook space gray</h5>
+                        <h5 class="modal__title js-cart-notification-title">Title</h5>
                     </div>
                     <p class="modal__msg">
                         {% render 'icons-svg', icons: 'check' -%}
-                        Added to cart successfully!
+                        <span class="js-cart-msg">Added to cart successfully!</span>
                     </p>
                     <div class="modal__button">
                         <a href="/collections/all" class="button button--link js-modal-close">
