--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -319,6 +319,7 @@ input.cart-drawer__input--property {
 
 .js-ajax-cart-message {
 	font-size: .8em;
+	margin-top: 10px;
 }
 
 .js-ajax-cart-message--error {
