--- a/snippets/form-product-combo.liquid
+++ b/snippets/form-product-combo.liquid
@@ -72,6 +72,12 @@
             {% endfor %}
         </select>
         <input
+            value=""
+            id="Combo"
+            type="text"
+            name="properties[_hiddenCombo]"
+        >
+        <input
             value="{{ combo_discount }}"
             hidden
             class="hidden"
