--- a/snippets/form-collection.liquid
+++ b/snippets/form-collection.liquid
@@ -92,7 +92,7 @@
                         id="AddToCart-{{ product.id }}"
                         class="button--secondary js-btn-cart card-product__button-cart"
                     >
-                        <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
+                        <span>{{ 'products.product.add_to_cart' | t }}</span>
                     </button>
                     {% render 'compare-wishlist-btns', product: product %}
                 </div>
@@ -171,7 +171,7 @@
                     id="AddToCart-{{ product.id }}"
                     class="button--secondary card-product__button-cart js-btn-cart"
                 >
-                    <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
+                    <span>{{ 'products.product.add_to_cart' | t }}</span>
                 </button>
                 {% render 'compare-wishlist-btns', product: product %}
             </div>
