--- a/snippets/form-product.liquid
+++ b/snippets/form-product.liquid
@@ -80,7 +80,7 @@
                         id="AddToCart-{{ product.id }}"
                         class="button--secondary card-product__button-cart js-btn-cart"
                     >
-                        <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
+                        <span>{{ 'products.product.add_to_cart' | t }}</span>
                     </button>
                 </div>
                 <div class="main-product__action--cart-messages" data-ajax-cart-messages="form"></div>
@@ -150,7 +150,7 @@
                     id="AddToCart-{{ product.id }}"
                     class="button--secondary card-product__button-cart js-btn-cart"
                 >
-                    <span id="AddToCartText">{{ 'products.product.add_to_cart' | t }}</span>
+                    <span>{{ 'products.product.add_to_cart' | t }}</span>
                 </button>
             </div>
             <div class="main-product__action--cart-messages" data-ajax-cart-messages="form"></div>
