--- a/snippets/product-info-card.liquid
+++ b/snippets/product-info-card.liquid
@@ -169,19 +169,22 @@
                     %}
                 {% endif %}
             </div>
-            <div class="main-product__buy-more">
-                <h4 class="main-product__buy-more-title">{{- 'products.product.buy_more' | t }}</h4>
-                <div class="main-product__buy-more-box">
-                    {% for item in buy_more_products %}
-                        <div class="buy-more__items js-buy-more-items">
-                            <div class="buy-more__item js-buy-more-item">{{ item }}</div>
-                            <div class="buy-more__btn button button--outline js-buy-more-btn">
-                                {{- 'products.product.buy_more_btn' | t }}
+            {% if buy_more_products.size > 0 %}
+                <div class="main-product__buy-more">
+                    <h4 class="main-product__buy-more-title">{{- 'products.product.buy_more' | t }}</h4>
+                    <div class="main-product__buy-more-box">
+                        {% for item in buy_more_products %}
+                            <div class="buy-more__items js-buy-more-items">
+                                <div class="buy-more__item js-buy-more-item">{{ item }}</div>
+                                <div class="buy-more__btn button button--outline js-buy-more-btn">
+                                    <span>{{- 'products.product.buy_more_btn' | t }}</span>
+                                </div>
                             </div>
-                        </div>
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
-            </div>
+            {% endif %}
+
             <div class="main-product__popup">
                 <details-open-notify>
                     <a
