--- a/scss/sections/section-ajax-cart.scss
+++ b/scss/sections/section-ajax-cart.scss
@@ -406,6 +406,32 @@ input.cart-drawer__input--property {
   	animation-iteration-count: infinite;
   	animation-timing-function: linear;
 }
+
+.ajax-cart__line-item-grouped {
+	position: relative;
+}
+.ajax-cart__line-item-grouped.js-ajax-cart-form-in-progress {
+	.ajax-cart__line-item {
+		opacity: 0;
+	}
+	&::before {
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-top: -8px;
+		margin-left: -8px;
+		border: 3px solid var(--color-secondary-button-background);
+		border-right-color: transparent;
+		border-radius: 100%;
+		width: 16px;
+		height: 16px;
+		animation-name: spin;
+		  animation-duration: 500ms;
+		  animation-iteration-count: infinite;
+		  animation-timing-function: linear;
+	}
+}
 @keyframes spin {
     from {
         transform:rotate(0deg);
@@ -572,9 +598,24 @@ input.cart-drawer__input--property {
 			order: 0!important;
 			margin-top: 0;
 		}
+		.icon-plus {
+			display: none;
+		}
+		.icon-trash {
+			pointer-events: none;
+		}
 	}
 	.ajax-cart__line-item + .ajax-cart__line-item {
 		order: 1;
+		.icon-plus {
+			display: inline-block;
+			width: 20px;
+			height: 20px;
+			margin: auto 0;
+			position: absolute;
+			left: 0;
+			bottom: -25px;
+		}
 	}
 }
 
