add pickup availability

--- a/snippets/icons-svg.liquid
+++ b/snippets/icons-svg.liquid
@@ -1,4 +1,32 @@
 {% case icons %}
+    {% when 'tick' %}
+        <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            focusable="false"
+            role="presentation"
+            class="icon icon-tick"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+        >
+            <path fill="#108043" stroke="#fff" d="M16.136 6.979h0l.003-.004a1.499 1.499 0 00-2.275-1.954l-5.945 6.777-1.858-1.859A1.499 1.499 0 103.94 12.06l2.999 3s0 0 0 0c.289.29.675.44 1.1.439h.019a1.5 1.5 0 001.08-.522l6.998-7.998z"/>
+        </svg>
+    {% when 'unavailable' %}
+        <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            focusable="false"
+            role="presentation"
+            class="icon icon-unavailable"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+        >
+            <path fill="#DE3618" stroke="#fff" d="M13.94 3.94L10 7.878l-3.94-3.94A1.499 1.499 0 103.94 6.06L7.88 10l-3.94 3.94a1.499 1.499 0 102.12 2.12L10 12.12l3.94 3.94a1.497 1.497 0 002.12 0 1.499 1.499 0 000-2.12L12.122 10l3.94-3.94a1.499 1.499 0 10-2.121-2.12z"/>
+        </svg>
     {% when 'shirt' %}
         <svg
             version="1.1"
