--- a/snippets/product-info-card.liquid
+++ b/snippets/product-info-card.liquid
@@ -185,6 +185,36 @@
                 </div>
             {% endif %}
 
+            {{ 'component-pickup-availability.css' | asset_url | stylesheet_tag }}
+
+            {%- assign pick_up_availabilities = product.selected_or_first_available_variant.store_availabilities
+                | where: 'pick_up_enabled', true
+            -%}
+
+            <pickup-availability
+                class="product__pickup-availabilities no-js-hidden quick-add-hidden"
+                {% if product.selected_or_first_available_variant.available and pick_up_availabilities.size > 0 %}
+                    available
+                {% endif %}
+                data-root-url="{{ routes.root_url }}"
+                data-variant-id="{{ product.selected_or_first_available_variant.id }}"
+                data-has-only-default-variant="{{ product.has_only_default_variant }}"
+            >
+                <template>
+                    <pickup-availability-preview class="pickup-availability-preview">
+                        {% render 'icons-svg', icons: 'unavailable' %}
+                        <div class="pickup-availability-info">
+                            <p class="caption-large">{{ 'products.product.pickup_availability.unavailable' | t }}</p>
+                            <button class="pickup-availability-button button button--link">
+                                {{ 'products.product.pickup_availability.refresh' | t }}
+                            </button>
+                        </div>
+                    </pickup-availability-preview>
+                </template>
+            </pickup-availability>
+
+            <script src="{{ 'pickup-availability.js' | asset_url }}" defer="defer"></script>
+
             <div class="main-product__popup">
                 <details-open-notify>
                     <a
