--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -2,6 +2,7 @@
     Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
 {% endcomment %}
 
+{% assign admin_option = settings.downcased_option %}
 {% assign file_extension = 'png' %}
 
 {% if swatch == blank %}
@@ -28,34 +29,21 @@
             {% assign found_option = true %}
             {% assign option_index = forloop.index0 %}
             {% assign downcased_option = swatch | downcase %}
-
-            {% if downcased_option contains 'color'
-                or downcased_option contains 'farbe'
-                or downcased_option contains 'couleur'
-            %}
+            {% if admin_option contains downcased_option %}
                 {% assign is_color = true %}
-                {% assign is_first = true %}
                 {% if variant_type == 'pills_color_images' %}
                     {% assign is_image = true %}
                 {% endif %}
             {% endif %}
 
-            {% if downcased_option contains 'size'
-                or downcased_option contains 'größe'
-                or downcased_option contains 'taille'
-            %}
-                {% assign is_second = true %}
-            {% endif %}
-
-            {% if downcased_option contains 'fill'
-                or downcased_option contains 'pattern'
-                or downcased_option contains 'material'
-                or downcased_option contains 'matériel'
-                or downcased_option contains 'muster'
-                or downcased_option contains 'modèle'
-            %}
-                {% assign is_third = true %}
-            {% endif %}
+            {% case option_index %}
+                {% when 0 %}
+                    {% assign is_first = true %}
+                {% when 1 %}
+                    {% assign is_second = true %}
+                {% when 2 %}
+                    {% assign is_third = true %}
+            {% endcase %}
         {% endif %}
     {% endfor %}
 
@@ -86,7 +74,7 @@
             {% assign class = 'swatch-third' %}
         {% endif %}
         <div
-            class="swatch swatch--product {% if is_color %}swatch-item-color {% endif %} swatch-item-{{ swatch }} js-{{ class }}"
+            class="swatch swatch--product {% if is_color %}swatch-item-color {% endif %} swatch-item-{{ swatch }} js-swatch js-{{ class }}"
             data-option-index="{{ option_index }}"
             data-swatch="{{ swatch }}"
         >
@@ -118,14 +106,19 @@
                         {% if option_index == 0 and grouped_product %}
                             aria-controls="{{ value }}-panel"
                         {% endif %}
-                        data-value="{{ value }}"
-                        class="swatch-element {% if option_index == 0 and grouped_product %} js-element-tab{% endif %}{% if is_color %} swatch-element-color {% endif %}{% if is_image %} swatch-element-image{% endif %} {{ value | handle }} js-swatch-element"
+                        data-swatch="{{ value }}"
+                        data-option="{{ value }}"
+                        data-swatch-index="{{ option_index }}"
+                        class="swatch-element js-swatch-level-{{ option_index }} {% if option_index == 0 and grouped_product %} js-element-tab{% endif %}{% if is_color %} swatch-element-color {% endif %}{% if is_image %} swatch-element-image{% endif %} {{ value | handle }} js-swatch-element {% if current_variant.options[option_index] == value %} active{% endif %}"
                     >
                         <input
                             id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}-{{ product.id }}"
                             type="radio"
                             name="option-{{ option_index }}-{{ section.id }}-{{ product.id }}"
                             value="{{ value | escape }}"
+                            {% if current_variant.options[option_index] == value %}
+                                checked
+                            {% endif %}
                             data-swatch-option="{{ option_index }}"
                         >
                         {% if is_color %}
