test version for swatch

--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -119,7 +119,7 @@
                             aria-controls="{{ value }}-panel"
                         {% endif %}
                         data-value="{{ value }}"
-                        class="swatch-element {% if option_index == 0 and grouped_product %} js-element-tab{% endif %}{% if is_color %} swatch-element-color {% endif %}{% if is_image %} swatch-element-image{% endif %} {{ value | handle }} js-swatch-element"
+                        class="swatch-element {% if option_index == 0 and grouped_product %} js-element-tab{% endif %}{% if is_color %} swatch-element-color {% endif %}{% if is_image %} swatch-element-image{% endif %} {{ value | handle }} js-swatch-element js-swatch-level-{{ option_index }}"
                     >
                         <input
                             id="swatch-{{ option_index }}-{{ value | handle }}-{{ section.id }}-{{ product.id }}"
