create new version swaych.js

--- a/scss/components/component-card-products.scss
+++ b/scss/components/component-card-products.scss
@@ -299,7 +299,7 @@ quantity-input {
             width: 100%;
             min-width: 100%;
             margin-bottom: 1rem;
-            display: none;
+            //display: none;
         }
         .swatch-element {
             margin-right: 6px;
