--- a/assets/section-product-complementary.css
+++ b/assets/section-product-complementary.css
@@ -10,6 +10,8 @@ swiper-section {
   padding-left: calc(0.7 * var(--pad-left-product-complementary));
   padding-right: calc(0.7 * var(--pad-right-product-complementary));
   color: var(--text-color-product-complementary);
+  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
 }
 @media screen and (min-width: 991px) {
   .product-complementary {
@@ -82,6 +84,18 @@ swiper-section {
 .product-complementary.content--center .card-post__tags--item {
   margin-right: 0.4rem;
   margin-left: 0.4rem;
+}
+@media (min-width: 991px) and (max-width: 1340px) {
+  .product-complementary .list-view .card-product__wrapper {
+    display: block;
+  }
+  .product-complementary .list-view .card-product__wrapper .card-product__media-wrapper {
+    width: 100%;
+  }
+  .product-complementary .list-view .card-product__wrapper .card-product__content {
+    padding-left: 0;
+    width: 100%;
+  }
 }
 
 .product-complementary__text {
@@ -169,36 +183,45 @@ swiper-section .product-complementary__list {
   margin-top: 5rem;
 }
 
-.product-complementary__item countdown-container,
-.product-complementary__item compare-wishlist {
+.list-view .product-complementary__item .card-product__content {
+  padding-left: 20px;
+}
+.list-view .product-complementary__item .card-product__title {
+  font-size: calc(var(--font-heading-scale) * 1.1rem);
+}
+.list-view .product-complementary__item .card-product__media-wrapper {
+  width: 125px;
+}
+.list-view .product-complementary__item countdown-container,
+.list-view .product-complementary__item compare-wishlist {
   display: none !important;
 }
-.product-complementary__item .card-product__badge {
+.list-view .product-complementary__item .card-product__badge {
   top: 10px;
 }
-.product-complementary__item .card-product__badge--on-sale,
-.product-complementary__item .card-product__badge--offer {
+.list-view .product-complementary__item .card-product__badge--on-sale,
+.list-view .product-complementary__item .card-product__badge--offer {
   left: 10px;
 }
-.product-complementary__item .card-product__badge--on-sale.hidden + .card-product__badge--offer {
+.list-view .product-complementary__item .card-product__badge--on-sale.hidden + .card-product__badge--offer {
   top: 10px;
 }
-.product-complementary__item .card-product__badge--new,
-.product-complementary__item .card-product__badge--sold {
+.list-view .product-complementary__item .card-product__badge--new,
+.list-view .product-complementary__item .card-product__badge--sold {
   right: 10px;
 }
-.product-complementary__item .card-product__media {
+.list-view .product-complementary__item .card-product__media {
   background: var(--color-white);
   -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
           box-shadow: 0 3px 7px rgba(0, 0, 0, 0.15);
 }
-.product-complementary__item .card-product__image,
-.product-complementary__item .card-product__image--second {
+.list-view .product-complementary__item .card-product__image,
+.list-view .product-complementary__item .card-product__image--second {
   height: calc(100% - 10px);
   width: calc(100% - 10px);
   margin: 5px;
 }
-.product-complementary__item .card-product__media::after {
+.list-view .product-complementary__item .card-product__media::after {
   content: "";
   border: solid 5px var(--color-white);
   height: 100%;
