--- a/scss/pages/section-main-product.scss
+++ b/scss/pages/section-main-product.scss
@@ -21,7 +21,9 @@
     overflow: hidden;
     position: sticky;
     top: 60px;
-
+    @media (min-width: 991px) and (max-width: 1640px) {
+        width: 50%;
+    }
     ul.tabs {
         display: none;
     }
@@ -42,6 +44,9 @@
     flex-wrap: wrap;
     position: sticky;
     top: 90px;
+    @media (min-width: 991px) and (max-width: 1640px) {
+        width: 50%;
+    }
 }
 
 .main-product__info-wrapper {
@@ -50,20 +55,20 @@
     align-items: flex-start;
     flex-wrap: wrap;
     .main-product__content {
-        width: calc(100% - 370px);
+        width: calc(100% - 310px);
         margin-bottom: 30px;
+        @media (min-width: 991px) and (max-width: 1640px) {
+            width: 100%;
+        }
     }
-}
-
-.main-product__info {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
 }
 
 .main-product__info-left  {
     padding-left: 40px;
-    padding-right: 40px;
+    
+    @media (min-width: 1641px) {
+        padding-right: 40px;
+    }
     > .card-product__badge {
         position: relative;
         top: 0;
@@ -75,10 +80,16 @@
 }
 
 .main-product__info-right {
-    width: 370px;
+    width: 310px;
     position: sticky;
     top: 90px;
     margin-bottom: 30px;
+    @media (min-width: 991px) and (max-width: 1640px) {
+        width: 100%;
+        position: relative;
+        top: 0;
+        padding-left: 40px;
+    }
 }
 
 .main-product__info-bottom {
@@ -88,7 +99,7 @@
 }
 
 .main-product__row--complementary {
-    margin-top: 30px;
+    margin-top: 0;
 }
 
 .overflow-hidden-notify .main-product__info-right {
@@ -98,11 +109,14 @@
 .main-product__title {
     margin-bottom: 15px;
     text-transform: none;
+    @media (min-width: 991px) and (max-width: 1640px) {
+        font-size: calc(var(--font-heading-scale) * 2.4rem);
+    }
 }
 
 .main-product__box-indent {
     background-color: #fff;
-    box-shadow: 0 5px 10px rgba(0,0,0, .1);
+    box-shadow: 0 0 1px rgba(0,0,0, .1);
     padding: 20px;
     .main-product__btns {
         margin-bottom: 15px;
@@ -195,7 +209,11 @@
         margin-bottom: 5px;
     }
 }
-
+.main-product__pay-pal img {
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+}
 .main-product__social-sharing {
     margin-bottom: 30px;
     .list-social {
@@ -795,6 +813,58 @@ details {
         font-weight: 400;
         padding-top: 4px;
         color: var(--color-body-text);
+    }
+}
+
+.main-product__back {
+    margin-bottom: 3rem;
+    margin-top: 3rem;
+    @media screen and (min-width: 991px) {
+        margin-bottom: 5rem;
+        margin-top: 5rem;
+    }
+    .divider {
+        padding-right: 4px;
+        margin-right: 4px;
+        border-right: 1px solid var(--color-input-border);
+    }
+}
+.main-product__pagination {
+    display: flex;
+    align-items: center;
+    @media all and (min-width: 768px) {
+        margin-left: auto;
+    }
+    .button {
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+}
+.main-product__back {
+    display: flex;
+    align-items: center;
+    @media all and (max-width: 767px) {
+        display: block;
+    }
+}
+
+.main-product__return-btn {
+    margin-right: 8px;
+    svg {
+        margin-right: 4px;
+    }
+}
+
+.main-product_pagination__prev {
+    margin-right: 8px;
+    svg {
+        margin-right: 4px;
+    }
+}
+
+.main-product_pagination__next {
+    svg {
+        margin-left: 4px;
     }
 }
 
