--- a/snippets/social-sharing.liquid
+++ b/snippets/social-sharing.liquid
@@ -38,7 +38,7 @@
     <li class="list-social__item">
         <a
             class="list-social__link link link--text"
-            href="//pinterest.com/pin/create/button/?url={{ shop.url | append: share_permalink }}}&amp;media={{ share_image | image_url: widtl: 1024, height: 1024 }}&amp;description={{ share_title | url_param_escape }}"
+            href="//pinterest.com/pin/create/button/?url={{ shop.url | append: share_permalink }}&amp;media={{ share_image | image_url: width: 1024, height: 1024 }}&amp;description={{ share_title | url_param_escape }}"
             target="_blank"
         >
             {% render 'icon-pinterest' %}
